# webscraping

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/: __init__.py  main.py  py.typed
tests/: __init__.py  conftest.py  test_example.py  test_main.py
