[project]

name = "webscraping"
version = "0.1.0"
description = "A Python utility for scraping tables and documents from websites."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.isort]
known-first-party = ["src"]
